client/src/app/Pages/training-view/training-view.component.scss
.title {
  font-size: 2.5rem;
  font-weight: bold;
}

.week-day-info {
  font-size: 1.5rem;
  margin-left: 1rem;
}

.training-table tr td input[type="number"] {
  text-align: center;
}

.training-table td:nth-of-type(1),
.training-table td:nth-of-type(2) {
  min-width: 140px;
}

.actualRPE {
  text-align: center;
}

.fixed-bottom-bar {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #f8f9fa;
  border-top: 4px solid white;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem 0;
}

.fixed-bottom-bar .icon {
  margin: 0 15px;
  cursor: pointer;
  font-size: 1.75rem;
}

#fixed-caption {
  font-weight: bold;
  font-family: "Poppins", sans-serif;
  padding-bottom: 1.5rem;
}

.context-headline,
.headline {
  font-size: 1.65rem;
}

.context-headline {
  color: #c9c9c9;
}

.headline {
  margin-left: 0.375rem;
}

.question-box {
  display: inline-block;

  color: black;
  margin-left: 2rem;
  cursor: pointer;
  border-radius: 5px;
  position: relative;
  top: 2px;
}

.question-box .icon {
  color: #4a4a4a;
  font-size: 24px;
}

@media (max-width: 768px) {
  .responsive-table td {
    display: grid;
    grid-template-columns: 20ch auto;
    padding-top: 1em;
    padding-bottom: 1em;
  }

  .responsive-table th {
    display: none;
  }

  .responsive-table td::before {
    content: attr(data-cell) ": ";
  }

  .training-table tr {
    border-top: 4px solid rgb(216, 216, 216);
  }

  .training-table td {
    border: none;
  }

  .training-table tr:first-of-type {
    border: none;
  }

  .training-table tr td input[type="number"] {
    text-align: left;
  }

  .actualRPE {
    text-align: left;
  }

  /* Fixate header in mobile view */
  #fixed-caption {
    padding-top: 0.45rem;
    padding-bottom: 0.15rem;

    position: fixed;
    top: 4.375rem;
    left: 5%;
    right: 5%;

    background-color: white;
    z-index: 1000;
  }

  /* Adjust table for visibility */
  table {
    position: relative;
    top: 2.25rem;
  }

  .pagination-container {
    margin-top: 3.25rem;
  }
}

